k8s/base/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trinetra-ui
  labels:
    app.kubernetes.io/name: trinetra-ui
    app.kubernetes.io/instance: deepSightAI-Trinetra
    app.kubernetes.io/component: frontend
spec:
  selector:
    app: trinetra-ui
  ports:
  - port: 3000
    targetPort: 3000
    name: http
    protocol: TCP
  type: ClusterIP
